[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
description = "Gardenzilla core library"
edition = "2018"
homepage = "https://github.com/gardenzilla/gzlib"
license = "GPL-2.0"
name = "gzlib"
repository = "https://github.com/gardenzilla/gzlib"
version = "0.2.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["proto", "id"]
id = []
proto = ["futures", "prost", "tokio", "tonic"]

[dependencies]
futures = {version = "0.3.5", optional = true}
prost = {version = "0.7", optional = true}
tokio = {version = "1.0", features = ["macros"], optional = true}
tonic = {version = "0.4.1", optional = true}

[build-dependencies]
tonic-build = "0.4.1"
